--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <!-- Personal Introduction Text Box -->
 <div id="personalIntro" style="margin-top: 50px; padding: 20px; background: rgba(255, 255, 255, 0.8); color: #333; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
     <h2>About Me and the App</h2>
-    <p>Hi there! My name is [Your Name]. I'm passionate about board games and created this app to help players easily track their progress in Terraforming Mars. This app helps you manage resources, track tags, and enjoy your game more efficiently without the hassle of manual calculations. I hope you find it as fun and useful as I intended it to be!</p>
+    <p>Hi there! My name is Kami. As a huge Terraforming Mars fan, I decided to create this app to help players easily track their progress in Terraforming Mars. Originally, the main intention was (and still is) to track the VPs and Tags, the two main reasons why we keep all the cards face up and super organized. It can take a lot of space on the table, especially if you don't own a boardgame table. With this app, you can simple stack your cards and put them aside, not having to worry about their visibility all the time. This app also helps you manage resources (not implemented yet), track tags, VPs and enjoy your game more efficiently without the hassle of manual calculations. I hope you find it as fun and useful as I intended it to be!</p>
 </div>
 
 <!-- Personal Photo -->
@@ -224,8 +224,6 @@
     <img src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/IMG_20241003_123711%20-%20Copy.jpg" alt="My Photo" style="width: 800px; height: auto; border-radius: 10px;">
 </div>
 
-<div id="personalPhoto" style="margin-top: 50px;">
-    <img src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/IMG_20241003_123711%20-%20Copy.jpg" alt="My Photo" style="width: 100%; max-width: 800px; height: auto; border-radius: 10px;">
-</div>
+
 </body>
 </html>
