--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     th { background-color: rgba(255, 255, 255, 0.2); }
     button { margin: 5px; padding: 5px 10px; background-color: #333; color: white; }
     img { max-width: 100%; width: 40px; height: auto; }
-    h1, h2 { background-color: rgba(0, 0, 0, 0.6); padding: 10px; display: inline-block; }
+    h1, h2 { background-color: rgba(0, 0, 0, 0.6); padding: 10px; display: inline-block; border-radius: 10px;}
 </style>
 </head>
 <body>
