--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         color: #ffffff; /* Ensure the numbers are visible */
     }
 </style>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 <h1>Terraforming Mars Manager by Kami</h1>
@@ -59,7 +60,7 @@
 <thead><tr><th>Tag</th><th>Count</th><th>Actions</th></tr></thead>
 <tbody id="tagTable">
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Earth.png"/> Earth </td><td><span id="earthCount">0</span></td>
-<td><button onclick="changeCount('earth', 1)">+</button><button onclick="changeCount('earth', -1)">-</button></td></tr>
+<td><button onclick="changeCount('earth', 1)">+</button><button onclick="changeCount('earth', -1')">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Space.png"/> Space </td><td><span id="spaceCount">0</span></td>
 <td><button onclick="changeCount('space', 1)">+</button><button onclick="changeCount('space', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Animal.png"/> Animal </td><td><span id="animalCount">0</span></td>
@@ -67,7 +68,7 @@
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Plant.png"/> Plant </td><td><span id="plantCount">0</span></td>
 <td><button onclick="changeCount('plant', 1)">+</button><button onclick="changeCount('plant', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Building.png"/> Building </td><td><span id="buildingCount">0</span></td>
-<td><button onclick="changeCount('building', 1)">+</button><button onclick="changeCount('building', -1)">-</button></td></tr>
+<td><button onclick="changeCount('building', 1)">+</button><button onclick="changeCount('building', -1')">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Event.png"/> Event </td><td><span id="eventCount">0</span></td>
 <td><button onclick="changeCount('event', 1)">+</button><button onclick="changeCount('event', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Science.png"/> Science </td><td><span id="scienceCount">0</span></td>
@@ -118,6 +119,12 @@
     <button onclick="resetGameState()">Reset Game</button>
 </div>
 
+<!-- Chart Container -->
+<div style="margin-top: 50px;">
+    <h2>Progress Graph</h2>
+    <canvas id="progressChart" width="400" height="200"></canvas>
+</div>
+
 <script>
     const tagCounts = { earth: 0, space: 0, animal: 0, plant: 0, building: 0, event: 0, science: 0, energy: 0, microbe: 0, jovian: 0, city: 0, venus: 0 };
 
@@ -131,134 +138,3 @@
         document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
         updateTotalTags();
         saveGameState(); // Save after updating tag counts
-    }
-
-    function updateTotalTags() {
-        const total = Object.values(tagCounts).reduce((a, b) => a + b, 0);
-        document.getElementById('totalTags').innerText = `Total Tags: ${total}`;
-    }
-
-    let vpCount = 0;
-    function changeVP(delta) {
-        vpCount += delta;
-        if (vpCount < 0) { vpCount = 0; }
-        document.getElementById('vpNumber').innerText = vpCount;
-        saveGameState(); // Save after updating VP
-    }
-
-    let trCount = 0;
-    function changeTR(delta) {
-        trCount += delta;
-        if (trCount < 0) { trCount = 0; }
-        document.getElementById('trCount').innerText = trCount;
-        saveGameState(); // Save after updating TR
-    }
-
-    let cardsDatabase = [];
-
-    // Load JSON Data and handle any errors
-    async function loadJSONData() {
-        try {
-            console.log("Attempting to load JSON...");
-            const response = await fetch('Card_Database_with_Numbers.json');
-            if (!response.ok) {
-                throw new Error(`HTTP error! Status: ${response.status}`);
-            }
-            const data = await response.json();
-            cardsDatabase = data;
-            console.log("JSON Data Loaded Successfully:", cardsDatabase);
-        } catch (error) {
-            console.error("Error loading JSON:", error);
-            document.getElementById("cardDetails").innerHTML = "<p>Error loading card data. Check console for details.</p>";
-        }
-    }
-
-    // Search Card by Card Number and update VP and tags
-    function searchCard() {
-        const cardInput = document.getElementById('cardNumberInput').value.trim();
-        const isNumeric = /^\d+$/.test(cardInput);
-        const cardNumber = isNumeric ? parseInt(cardInput, 10) : cardInput;
-        const card = cardsDatabase.find(c => c['Card Number'] === cardNumber);
-
-        if (card) {
-            changeVP(Number(card.VP) || 0);
-            Object.keys(card).forEach(key => {
-                if (key.startsWith("Tag:") && card[key] === 1) {
-                    const tag = key.replace("Tag: ", "").toLowerCase();
-                    changeCount(tag, 1);
-                }
-            });
-
-            document.getElementById("cardDetails").innerHTML = `<p>Found card: ${card['Card Name']} with VP: ${card.VP}</p>`;
-            console.log("Card found:", card); 
-        } else {
-            document.getElementById("cardDetails").innerHTML = "<p>Card not found. Please try a different number.</p>";
-            console.log("Card not found:", cardInput); 
-        }
-    }
-
-    // Save game state to local storage
-    function saveGameState() {
-        const gameState = {
-            vpCount,
-            trCount,
-            tagCounts
-        };
-        localStorage.setItem('terraformingMarsGameState', JSON.stringify(gameState));
-    }
-
-    // Load game state from local storage
-    function loadGameState() {
-        const savedState = localStorage.getItem('terraformingMarsGameState');
-        if (savedState) {
-            const gameState = JSON.parse(savedState);
-            vpCount = gameState.vpCount || 0;
-            trCount = gameState.trCount || 0;
-            document.getElementById('vpNumber').innerText = vpCount;
-            document.getElementById('trCount').innerText = trCount;
-
-            Object.keys(gameState.tagCounts).forEach(tag => {
-                tagCounts[tag] = gameState.tagCounts[tag];
-                document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
-            });
-            updateTotalTags();
-        }
-    }
-
-    // Reset game state
-    function resetGameState() {
-        vpCount = 0;
-        trCount = 0;
-        Object.keys(tagCounts).forEach(tag => {
-            tagCounts[tag] = 0;
-            document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
-        });
-        document.getElementById('vpNumber').innerText = vpCount;
-        document.getElementById('trCount').innerText = trCount;
-        updateTotalTags();
-        localStorage.removeItem('terraformingMarsGameState'); // Clear saved state
-    }
-
-    // Load JSON and game state on Page Load
-    document.addEventListener("DOMContentLoaded", () => {
-        loadJSONData();
-        loadGameState();
-    });
-</script>
-    <!-- Personal Introduction Text Box -->
-<div id="personalIntro" style="margin-top: 50px; padding: 20px; background: rgba(239, 126, 55, 0.9); color: #000000; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-    <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;">About Me and the App</h2>
-    <p>Hi there!<br> Welcome to my App! My name is Kami :)</p> 
-    <p>As a huge Terraforming Mars fan, I decided to create this app to help players easily track their progress in Terraforming Mars. </p>
-    <p>Originally, the main intention was (and still is) to track VPs and Tags, which are the two main reasons why we keep all the cards face up on the table. It can take a lot of space on the table, especially if you don't own a large boardgame table. With this app, you can simply stack your played cards and put them aside, not having to worry about their visibility all the time.</p>
-    <p>This app also helps you manage resources (not implemented yet), track tags, VPs and enjoy your game more efficiently without the hassle of manual calculations. I hope you find it as fun and useful as I intended it to be! If you have any feedback, please contact me via killionaire23ttv@gmail.com. I'd love to hear from you!</p>
-    <p>As a little something extra, here is a photo of the designer of Terraforming Mars/co-owner of Fryxgames Jacob Fryxelius and I, posing with a custom TM card I made for Spiel Essen in '24 for giggles. Before you ask, yes, while it was not my intention, he did insist on giving me a 50% off! What a lad!</p>
-
-<!-- Personal Photo -->
-<div id="personalPhoto" style="margin-top: 50px;">
-    <img src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/IMG_20241003_123711%20-%20Copy.jpg" alt="My Photo" style="width: 800px; height: auto; border-radius: 10px;">
-</div>
-
-
-</body>
-</html>
