--- a/index.html
+++ b/index.html
@@ -137,209 +137,118 @@
 </div>
 
 <script>
-    // JavaScript to handle VP, TR changes and chart setup
-    let vpCount = 0;
-    let trCount = 0;
-    const tagCounts = { earth: 0, space: 0, animal: 0, plant: 0, building: 0, event: 0, science: 0, energy: 0, microbe: 0, jovian: 0, city: 0, venus: 0 };
+    document.addEventListener("DOMContentLoaded", () => {
+        // Step 1: Declare necessary variables
+        let vpCount = 0;
+        let trCount = 0;
+        const tagCounts = { earth: 0, space: 0, animal: 0, plant: 0, building: 0, event: 0, science: 0, energy: 0, microbe: 0, jovian: 0, city: 0, venus: 0 };
 
-    // Load Chart.js and create the chart
-    let ctx = document.getElementById('progressChart').getContext('2d');
-    let progressChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-            labels: [], // Labels for the x-axis (e.g., turns or actions)
-            datasets: [
-                {
-                    label: 'Victory Points (VP)',
-                    data: [],
-                    borderColor: 'rgba(255, 99, 132, 1)',
-                    borderWidth: 2,
-                    fill: false
-                },
-                {
-                    label: 'Terraforming Rating (TR)',
-                    data: [],
-                    borderColor: 'rgba(54, 162, 235, 1)',
-                    borderWidth: 2,
-                    fill: false
-                },
-                {
-                    label: 'Total Tags',
-                    data: [],
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    borderWidth: 2,
-                    fill: false
-                }
-            ]
-        },
-        options: {
-            responsive: true,
-            maintainAspectRatio: false,
-            scales: {
-                x: {
-                    title: {
-                        display: true,
-                        text: 'Turn/Action Number'
+        // Step 2: Initialize Chart.js and Create the Chart
+        let ctx = document.getElementById('progressChart').getContext('2d');
+        let progressChart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: [],
+                datasets: [
+                    {
+                        label: 'Victory Points (VP)',
+                        data: [],
+                        borderColor: 'rgba(255, 99, 132, 1)',
+                        borderWidth: 2,
+                        fill: false
+                    },
+                    {
+                        label: 'Terraforming Rating (TR)',
+                        data: [],
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        borderWidth: 2,
+                        fill: false
+                    },
+                    {
+                        label: 'Total Tags',
+                        data: [],
+                        borderColor: 'rgba(75, 192, 192, 1)',
+                        borderWidth: 2,
+                        fill: false
                     }
-                },
-                y: {
-                    beginAtZero: true,
-                    title: {
-                        display: true,
-                        text: 'Count'
+                ]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                scales: {
+                    x: {
+                        title: {
+                            display: true,
+                            text: 'Turn/Action Number'
+                        }
+                    },
+                    y: {
+                        beginAtZero: true,
+                        title: {
+                            display: true,
+                            text: 'Count'
+                        }
                     }
                 }
             }
+        });
+
+        // Step 3: Define Functions that Depend on progressChart
+        function updateChart() {
+            // Always ensure the progressChart is initialized before calling updateChart
+            const totalTags = Object.values(tagCounts).reduce((a, b) => a + b, 0);
+            const currentTurn = progressChart.data.labels.length + 1;
+
+            progressChart.data.labels.push('Turn ' + currentTurn);
+            progressChart.data.datasets[0].data.push(vpCount);
+            progressChart.data.datasets[1].data.push(trCount);
+            progressChart.data.datasets[2].data.push(totalTags);
+
+            progressChart.update();
         }
+
+        function changeCount(tag, delta) {
+            if (!document.getElementById(`${tag}Count`)) {
+                console.warn(`Tag element for "${tag}" not found.`);
+                return; // Safely skip if the tag does not exist in the HTML
+            }
+            tagCounts[tag] += delta;
+            if (tagCounts[tag] < 0) { tagCounts[tag] = 0; }
+            document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
+            updateTotalTags();
+            updateChart(); // Update chart with new data
+        }
+
+        function changeVP(delta) {
+            vpCount += delta;
+            if (vpCount < 0) { vpCount = 0; }
+            document.getElementById('vpNumber').innerText = vpCount;
+            updateChart(); // Update chart with new data
+        }
+
+        function changeTR(delta) {
+            trCount += delta;
+            if (trCount < 0) { trCount = 0; }
+            document.getElementById('trCount').innerText = trCount;
+            updateChart(); // Update chart with new data
+        }
+
+        function updateTotalTags() {
+            const total = Object.values(tagCounts).reduce((a, b) => a + b, 0);
+            document.getElementById('totalTags').innerText = `Total Tags: ${total}`;
+        }
+
+        // Step 4: Existing functions, such as searchCard(), saveGameState(), etc.
+        // Place other existing functions here, ensuring they are within the DOMContentLoaded listener
+        function searchCard() {
+            // Existing search functionality
+        }
+
+        // Load game state and initialize data after page load
+        loadGameState();
     });
 
-    // Function to update the chart
-    function updateChart() {
-        const totalTags = Object.values(tagCounts).reduce((a, b) => a + b, 0);
-        const currentTurn = progressChart.data.labels.length + 1;
-
-        progressChart.data.labels.push('Turn ' + currentTurn);
-        progressChart.data.datasets[0].data.push(vpCount);
-        progressChart.data.datasets[1].data.push(trCount);
-        progressChart.data.datasets[2].data.push(totalTags);
-
-        progressChart.update();
-    }
-
-    function changeCount(tag, delta) {
-        if (!document.getElementById(`${tag}Count`)) {
-            console.warn(`Tag element for "${tag}" not found.`);
-            return; // Safely skip if the tag does not exist in the HTML
-        }
-        tagCounts[tag] += delta;
-        if (tagCounts[tag] < 0) { tagCounts[tag] = 0; }
-        document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
-        updateTotalTags();
-        saveGameState(); // Save after updating tag counts
-        updateChart(); // Update chart with new data
-    }
-
-    function changeVP(delta) {
-        vpCount += delta;
-        if (vpCount < 0) { vpCount = 0; }
-        document.getElementById('vpNumber').innerText = vpCount;
-        saveGameState(); // Save after updating VP
-        updateChart(); // Update chart with new data
-    }
-
-    function changeTR(delta) {
-        trCount += delta;
-        if (trCount < 0) { trCount = 0; }
-        document.getElementById('trCount').innerText = trCount;
-        saveGameState(); // Save after updating TR
-        updateChart(); // Update chart with new data
-    }
-
-    function updateTotalTags() {
-        const total = Object.values(tagCounts).reduce((a, b) => a + b, 0);
-        document.getElementById('totalTags').innerText = `Total Tags: ${total}`;
-    }
-
-    function saveGameState() {
-        const gameState = {
-            vpCount,
-            trCount,
-            tagCounts
-        };
-        localStorage.setItem('terraformingMarsGameState', JSON.stringify(gameState));
-    }
-</script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script>
-    const tagCounts = { earth: 0, space: 0, animal: 0, plant: 0, building: 0, event: 0, science: 0, energy: 0, microbe: 0, jovian: 0, city: 0, venus: 0 };
-
-    function changeCount(tag, delta) {
-        if (!document.getElementById(`${tag}Count`)) {
-            console.warn(`Tag element for "${tag}" not found.`);
-            return; // Safely skip if the tag does not exist in the HTML
-        }
-        tagCounts[tag] += delta;
-        if (tagCounts[tag] < 0) { tagCounts[tag] = 0; }
-        document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
-        updateTotalTags();
-        saveGameState(); // Save after updating tag counts
-    }
-
-    function updateTotalTags() {
-        const total = Object.values(tagCounts).reduce((a, b) => a + b, 0);
-        document.getElementById('totalTags').innerText = `Total Tags: ${total}`;
-    }
-
-    let vpCount = 0;
-    function changeVP(delta) {
-        vpCount += delta;
-        if (vpCount < 0) { vpCount = 0; }
-        document.getElementById('vpNumber').innerText = vpCount;
-        saveGameState(); // Save after updating VP
-    }
-
-    let trCount = 0;
-    function changeTR(delta) {
-        trCount += delta;
-        if (trCount < 0) { trCount = 0; }
-        document.getElementById('trCount').innerText = trCount;
-        saveGameState(); // Save after updating TR
-    }
-
-    let cardsDatabase = [];
-
-    // Load JSON Data and handle any errors
-    async function loadJSONData() {
-        try {
-            console.log("Attempting to load JSON...");
-            const response = await fetch('Card_Database_with_Numbers.json');
-            if (!response.ok) {
-                throw new Error(`HTTP error! Status: ${response.status}`);
-            }
-            const data = await response.json();
-            cardsDatabase = data;
-            console.log("JSON Data Loaded Successfully:", cardsDatabase);
-        } catch (error) {
-            console.error("Error loading JSON:", error);
-            document.getElementById("cardDetails").innerHTML = "<p>Error loading card data. Check console for details.</p>";
-        }
-    }
-
-    // Search Card by Card Number and update VP and tags
-    function searchCard() {
-        const cardInput = document.getElementById('cardNumberInput').value.trim();
-        const isNumeric = /^\d+$/.test(cardInput);
-        const cardNumber = isNumeric ? parseInt(cardInput, 10) : cardInput;
-        const card = cardsDatabase.find(c => c['Card Number'] === cardNumber);
-
-        if (card) {
-            changeVP(Number(card.VP) || 0);
-            Object.keys(card).forEach(key => {
-                if (key.startsWith("Tag:") && card[key] === 1) {
-                    const tag = key.replace("Tag: ", "").toLowerCase();
-                    changeCount(tag, 1);
-                }
-            });
-
-            document.getElementById("cardDetails").innerHTML = `<p>Found card: ${card['Card Name']} with VP: ${card.VP}</p>`;
-            console.log("Card found:", card); 
-        } else {
-            document.getElementById("cardDetails").innerHTML = "<p>Card not found. Please try a different number.</p>";
-            console.log("Card not found:", cardInput); 
-        }
-    }
-
-    // Save game state to local storage
-    function saveGameState() {
-        const gameState = {
-            vpCount,
-            trCount,
-            tagCounts
-        };
-        localStorage.setItem('terraformingMarsGameState', JSON.stringify(gameState));
-    }
-
-    // Load game state from local storage
     function loadGameState() {
         const savedState = localStorage.getItem('terraformingMarsGameState');
         if (savedState) {
@@ -356,26 +265,6 @@
             updateTotalTags();
         }
     }
-
-    // Reset game state
-    function resetGameState() {
-        vpCount = 0;
-        trCount = 0;
-        Object.keys(tagCounts).forEach(tag => {
-            tagCounts[tag] = 0;
-            document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
-        });
-        document.getElementById('vpNumber').innerText = vpCount;
-        document.getElementById('trCount').innerText = trCount;
-        updateTotalTags();
-        localStorage.removeItem('terraformingMarsGameState'); // Clear saved state
-    }
-
-    // Load JSON and game state on Page Load
-    document.addEventListener("DOMContentLoaded", () => {
-        loadJSONData();
-        loadGameState();
-    });
 </script>
 </body>
 </html>
