--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
 <thead><tr><th>Tag</th><th>Count</th><th>Actions</th></tr></thead>
 <tbody id="tagTable">
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Earth.png"/> Earth </td><td><span id="earthCount">0</span></td>
-<td><button onclick="changeCount('earth', 1)">+</button><button onclick="changeCount('earth', -1)">-</button></td></tr>
+<td>
+    <button class="increment" onclick="changeCount('earth', 1)">+</button>
+    <button onclick="changeCount('earth', -1)">-</button>
+</td>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Space.png"/> Space </td><td><span id="spaceCount">0</span></td>
 <td><button onclick="changeCount('space', 1)">+</button><button onclick="changeCount('space', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Animal.png"/> Animal </td><td><span id="animalCount">0</span></td>
